fix: Increasing calendar width makes the inline time picker not centered (fixes #1117)

--- a/src/VueDatePicker/style/components/_TimeInput.scss
+++ b/src/VueDatePicker/style/components/_TimeInput.scss
@@ -1,7 +1,7 @@
 @use "shared";
 
 .dp--tp-wrap {
-  max-width: var(--dp-menu-min-width);
+  width: 100%;
 
   &[data-dp-mobile] {
     max-width: 100%;
